--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,10 @@
   "type": "module",
   "scripts": {
     "build": "npx tsc",
+    "start": "npm run build && node dist/server.js --ignore client",
     "dev": "npx nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node dist/seeds/index.js",
-    "start": "PORT=10000 npm run build && node dist/server.js --ignore client"
-
+    "seed": "node dist/seeds/index.js"
   },
   "nodemonConfig": {
     "watch": [
